added swaggerjsdcocs for  /api/textbooks/searchtextbooks:
- added fomatted jsdocs to the afformentioned endpoint

- updated doc version to reflext the cuurent version (skipped some numbers as i forgot to update it multiple times before)
